Updated Kaggle links.

--- a/snapshots/celosia-dynamic-network-update-demo.ipynb
+++ b/snapshots/celosia-dynamic-network-update-demo.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Celosia - Experiment to demonstrate a dynamic network update"
+    "# Celosia - Dynamic network update demo"
    ]
   },
   {
@@ -227,38 +227,25 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/3\n",
-      "81949/81949 [==============================] - 2s 29us/step - loss: 0.0786 - accuracy: 0.9717\n",
+      "81949/81949 [==============================] - 2s 30us/step - loss: 0.0786 - accuracy: 0.9661\n",
       "Epoch 2/3\n",
-      "81949/81949 [==============================] - 2s 25us/step - loss: 9.7846e-04 - accuracy: 0.9998\n",
+      "81949/81949 [==============================] - 2s 24us/step - loss: 0.0014 - accuracy: 0.9997\n",
       "Epoch 3/3\n",
-      "81949/81949 [==============================] - 2s 25us/step - loss: 4.6265e-04 - accuracy: 0.9999\n",
+      "81949/81949 [==============================] - 2s 26us/step - loss: 6.2130e-04 - accuracy: 0.9999\n",
       "Could not transfer weights for layer dense_1\n",
       "Epoch 1/3\n",
-      "81949/81949 [==============================] - 2s 27us/step - loss: 0.0394 - accuracy: 0.9956\n",
+      "81949/81949 [==============================] - 2s 27us/step - loss: 0.0267 - accuracy: 0.9962\n",
       "Epoch 2/3\n",
-      "81949/81949 [==============================] - 2s 26us/step - loss: 7.5193e-04 - accuracy: 0.9999\n",
+      "81949/81949 [==============================] - 2s 26us/step - loss: 6.9174e-04 - accuracy: 0.9999\n",
       "Epoch 3/3\n",
-      "81949/81949 [==============================] - 2s 26us/step - loss: 3.6934e-04 - accuracy: 1.0000\n",
+      "81949/81949 [==============================] - 2s 26us/step - loss: 3.6508e-04 - accuracy: 0.9999\n",
       "Epoch 1/3\n",
-      "49593/49593 [==============================] - 1s 29us/step - loss: 0.1918 - accuracy: 0.9242\n",
+      "49593/49593 [==============================] - 1s 28us/step - loss: 0.1253 - accuracy: 0.9730\n",
       "Epoch 2/3\n",
-      "49593/49593 [==============================] - 1s 26us/step - loss: 0.0870 - accuracy: 0.9997\n",
+      "49593/49593 [==============================] - 1s 25us/step - loss: 0.0017 - accuracy: 0.9998\n",
       "Epoch 3/3\n",
-      "49593/49593 [==============================] - 1s 26us/step - loss: 0.0559 - accuracy: 0.9999\n",
-      "Could not transfer weights for layer dense_4\n",
-      "Epoch 1/3\n",
-      "49593/49593 [==============================] - 1s 28us/step - loss: 0.1185 - accuracy: 0.9567\n",
-      "Epoch 2/3\n",
-      "49593/49593 [==============================] - 1s 25us/step - loss: 0.0368 - accuracy: 1.0000\n",
-      "Epoch 3/3\n",
-      "49593/49593 [==============================] - 1s 25us/step - loss: 0.0269 - accuracy: 1.0000\n",
-      "Epoch 1/3\n",
-      "69085/69085 [==============================] - 2s 27us/step - loss: 0.1153 - accuracy: 0.9664\n",
-      "Epoch 2/3\n",
-      "69085/69085 [==============================] - 2s 26us/step - loss: 0.0024 - accuracy: 0.9995\n",
-      "Epoch 3/3\n",
-      "69085/69085 [==============================] - 2s 26us/step - loss: 8.8808e-04 - accuracy: 0.9997\n",
-      "Could not transfer weights for layer dense_7\n"
+      "49593/49593 [==============================] - 1s 25us/step - loss: 7.4728e-04 - accuracy: 0.9998\n",
+      "Could not transfer weights for layer dense_4\n"
      ]
     },
     {
@@ -276,89 +263,118 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/3\n",
-      "69085/69085 [==============================] - 2s 28us/step - loss: 0.0427 - accuracy: 0.9936\n",
+      "49593/49593 [==============================] - 1s 28us/step - loss: 0.0492 - accuracy: 0.9840\n",
       "Epoch 2/3\n",
-      "69085/69085 [==============================] - 2s 26us/step - loss: 4.3402e-04 - accuracy: 0.9999\n",
+      "49593/49593 [==============================] - 1s 26us/step - loss: 8.8812e-04 - accuracy: 0.9999\n",
       "Epoch 3/3\n",
-      "69085/69085 [==============================] - 2s 26us/step - loss: 1.3807e-04 - accuracy: 1.0000\n",
+      "49593/49593 [==============================] - 1s 25us/step - loss: 3.7009e-04 - accuracy: 0.9999\n",
       "Epoch 1/3\n",
-      "175044/175044 [==============================] - 5s 27us/step - loss: 0.0404 - accuracy: 0.9961\n",
+      "69085/69085 [==============================] - 2s 27us/step - loss: 0.0820 - accuracy: 0.9778\n",
       "Epoch 2/3\n",
-      "175044/175044 [==============================] - 4s 25us/step - loss: 1.6210e-04 - accuracy: 1.0000\n",
+      "69085/69085 [==============================] - 2s 25us/step - loss: 0.0017 - accuracy: 0.9996\n",
       "Epoch 3/3\n",
-      "175044/175044 [==============================] - 4s 26us/step - loss: 5.9678e-05 - accuracy: 1.0000\n",
+      "69085/69085 [==============================] - 2s 26us/step - loss: 6.3058e-04 - accuracy: 0.9998\n",
+      "Could not transfer weights for layer dense_7\n",
+      "Epoch 1/3\n",
+      "69085/69085 [==============================] - 2s 27us/step - loss: 0.0271 - accuracy: 0.9986\n",
+      "Epoch 2/3\n",
+      "69085/69085 [==============================] - 2s 25us/step - loss: 4.4285e-04 - accuracy: 1.0000\n",
+      "Epoch 3/3\n",
+      "69085/69085 [==============================] - 2s 26us/step - loss: 1.3940e-04 - accuracy: 1.0000\n",
+      "Epoch 1/3\n",
+      "175044/175044 [==============================] - 5s 27us/step - loss: 0.0436 - accuracy: 0.9948\n",
+      "Epoch 2/3\n",
+      "175044/175044 [==============================] - 4s 26us/step - loss: 2.6815e-04 - accuracy: 0.9999\n",
+      "Epoch 3/3\n",
+      "175044/175044 [==============================] - 5s 26us/step - loss: 9.0672e-05 - accuracy: 1.0000\n",
       "Could not transfer weights for layer dense_10\n",
       "Epoch 1/3\n",
-      "175044/175044 [==============================] - 5s 27us/step - loss: 0.0121 - accuracy: 0.9995\n",
+      "175044/175044 [==============================] - 5s 27us/step - loss: 0.0103 - accuracy: 0.9992\n",
       "Epoch 2/3\n",
-      "175044/175044 [==============================] - 5s 26us/step - loss: 9.9213e-05 - accuracy: 1.0000\n",
+      "175044/175044 [==============================] - 5s 26us/step - loss: 5.8565e-05 - accuracy: 1.0000\n",
       "Epoch 3/3\n",
-      "175044/175044 [==============================] - 5s 26us/step - loss: 1.3005e-05 - accuracy: 1.0000\n",
+      "175044/175044 [==============================] - 5s 26us/step - loss: 8.6735e-06 - accuracy: 1.0000\n",
       "Epoch 1/3\n",
-      "92650/92650 [==============================] - 2s 27us/step - loss: 0.0987 - accuracy: 0.9717\n",
+      "92650/92650 [==============================] - 3s 27us/step - loss: 0.0744 - accuracy: 0.9895\n",
       "Epoch 2/3\n",
-      "92650/92650 [==============================] - 2s 25us/step - loss: 5.6550e-04 - accuracy: 0.9999\n",
+      "92650/92650 [==============================] - 2s 26us/step - loss: 5.6092e-04 - accuracy: 0.9999\n",
       "Epoch 3/3\n",
-      "92650/92650 [==============================] - 2s 25us/step - loss: 1.7378e-04 - accuracy: 1.0000\n",
+      "92650/92650 [==============================] - 2s 26us/step - loss: 1.9247e-04 - accuracy: 1.0000\n",
       "Could not transfer weights for layer dense_13\n",
       "Epoch 1/3\n",
-      "92650/92650 [==============================] - 2s 27us/step - loss: 0.0266 - accuracy: 0.9988\n",
+      "92650/92650 [==============================] - 3s 28us/step - loss: 0.0288 - accuracy: 0.9960\n",
       "Epoch 2/3\n",
-      "92650/92650 [==============================] - 2s 26us/step - loss: 2.4176e-04 - accuracy: 1.0000\n",
+      "92650/92650 [==============================] - 2s 26us/step - loss: 1.8478e-04 - accuracy: 1.0000\n",
       "Epoch 3/3\n",
-      "92650/92650 [==============================] - 2s 26us/step - loss: 7.6149e-05 - accuracy: 1.0000\n",
+      "92650/92650 [==============================] - 3s 27us/step - loss: 4.6956e-05 - accuracy: 1.0000\n",
       "Epoch 1/3\n",
-      "117033/117033 [==============================] - 3s 26us/step - loss: 0.0558 - accuracy: 0.9869\n",
+      "117033/117033 [==============================] - 3s 27us/step - loss: 0.1861 - accuracy: 0.9611\n",
       "Epoch 2/3\n",
-      "117033/117033 [==============================] - 3s 26us/step - loss: 6.2570e-04 - accuracy: 0.9999\n",
+      "117033/117033 [==============================] - 3s 25us/step - loss: 0.0511 - accuracy: 0.9999\n",
       "Epoch 3/3\n",
-      "117033/117033 [==============================] - 3s 25us/step - loss: 2.2247e-04 - accuracy: 0.9999\n",
-      "Could not transfer weights for layer dense_16\n",
+      "117033/117033 [==============================] - 3s 26us/step - loss: 0.0204 - accuracy: 1.0000\n",
+      "Could not transfer weights for layer dense_16\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.6/site-packages/sklearn/metrics/classification.py:1437: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n",
+      "/opt/conda/lib/python3.6/site-packages/sklearn/metrics/classification.py:1437: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Epoch 1/3\n",
-      "117033/117033 [==============================] - 3s 27us/step - loss: 0.0154 - accuracy: 0.9982\n",
+      "117033/117033 [==============================] - 3s 27us/step - loss: 0.0640 - accuracy: 0.9796\n",
       "Epoch 2/3\n",
-      "117033/117033 [==============================] - 3s 25us/step - loss: 1.5215e-04 - accuracy: 1.0000\n",
+      "117033/117033 [==============================] - 3s 25us/step - loss: 0.0085 - accuracy: 0.9999\n",
       "Epoch 3/3\n",
-      "117033/117033 [==============================] - 3s 25us/step - loss: 3.6626e-05 - accuracy: 1.0000\n",
+      "117033/117033 [==============================] - 3s 26us/step - loss: 0.0048 - accuracy: 1.0000\n",
       "Epoch 1/3\n",
-      "83114/83114 [==============================] - 3s 31us/step - loss: 0.0881 - accuracy: 0.9809\n",
+      "83114/83114 [==============================] - 2s 28us/step - loss: 0.0659 - accuracy: 0.9881\n",
       "Epoch 2/3\n",
-      "83114/83114 [==============================] - 2s 27us/step - loss: 0.0016 - accuracy: 0.9996\n",
+      "83114/83114 [==============================] - 2s 26us/step - loss: 9.6123e-04 - accuracy: 0.9999\n",
       "Epoch 3/3\n",
-      "83114/83114 [==============================] - 2s 27us/step - loss: 5.6637e-04 - accuracy: 0.9999\n",
+      "83114/83114 [==============================] - 2s 25us/step - loss: 4.8408e-04 - accuracy: 0.9999\n",
       "Could not transfer weights for layer dense_19\n",
       "Epoch 1/3\n",
-      "83114/83114 [==============================] - 2s 28us/step - loss: 0.0337 - accuracy: 0.9945\n",
+      "83114/83114 [==============================] - 2s 27us/step - loss: 0.0319 - accuracy: 0.9972\n",
       "Epoch 2/3\n",
-      "83114/83114 [==============================] - 2s 26us/step - loss: 6.0273e-04 - accuracy: 0.9999\n",
+      "83114/83114 [==============================] - 2s 26us/step - loss: 3.9180e-04 - accuracy: 1.0000\n",
       "Epoch 3/3\n",
-      "83114/83114 [==============================] - 2s 25us/step - loss: 2.4176e-04 - accuracy: 1.0000\n",
+      "83114/83114 [==============================] - 2s 26us/step - loss: 1.6103e-04 - accuracy: 1.0000\n",
       "Epoch 1/3\n",
-      "75651/75651 [==============================] - 2s 27us/step - loss: 0.2657 - accuracy: 0.9458\n",
+      "75651/75651 [==============================] - 2s 27us/step - loss: 0.0828 - accuracy: 0.9825\n",
       "Epoch 2/3\n",
-      "75651/75651 [==============================] - 2s 25us/step - loss: 0.0939 - accuracy: 1.0000\n",
+      "75651/75651 [==============================] - 2s 25us/step - loss: 3.1811e-04 - accuracy: 0.9999\n",
       "Epoch 3/3\n",
-      "75651/75651 [==============================] - 2s 25us/step - loss: 0.0478 - accuracy: 1.0000\n",
+      "75651/75651 [==============================] - 2s 25us/step - loss: 7.4610e-05 - accuracy: 1.0000\n",
       "Could not transfer weights for layer dense_22\n",
       "Epoch 1/3\n",
-      "75651/75651 [==============================] - 2s 28us/step - loss: 0.0619 - accuracy: 0.9720\n",
+      "75651/75651 [==============================] - 2s 27us/step - loss: 0.0252 - accuracy: 0.9978\n",
       "Epoch 2/3\n",
-      "75651/75651 [==============================] - 2s 26us/step - loss: 6.2244e-04 - accuracy: 0.9999\n",
+      "75651/75651 [==============================] - 2s 25us/step - loss: 5.3926e-04 - accuracy: 0.9999\n",
       "Epoch 3/3\n",
-      "75651/75651 [==============================] - 2s 26us/step - loss: 1.5861e-04 - accuracy: 1.0000\n",
+      "75651/75651 [==============================] - 2s 26us/step - loss: 1.5106e-04 - accuracy: 1.0000\n",
       "Epoch 1/3\n",
-      "59194/59194 [==============================] - 2s 27us/step - loss: 0.0880 - accuracy: 0.9855\n",
+      "59194/59194 [==============================] - 2s 27us/step - loss: 0.2135 - accuracy: 0.9226\n",
       "Epoch 2/3\n",
-      "59194/59194 [==============================] - 1s 25us/step - loss: 0.0011 - accuracy: 0.9998\n",
+      "59194/59194 [==============================] - 1s 24us/step - loss: 0.0893 - accuracy: 0.9997\n",
       "Epoch 3/3\n",
-      "59194/59194 [==============================] - 1s 25us/step - loss: 4.5117e-04 - accuracy: 0.9999\n",
+      "59194/59194 [==============================] - 1s 25us/step - loss: 0.0522 - accuracy: 0.9999\n",
       "Could not transfer weights for layer dense_25\n",
       "Epoch 1/3\n",
-      "59194/59194 [==============================] - 2s 28us/step - loss: 0.0436 - accuracy: 0.9978\n",
+      "59194/59194 [==============================] - 2s 28us/step - loss: 0.0508 - accuracy: 0.9792\n",
       "Epoch 2/3\n",
-      "59194/59194 [==============================] - 2s 25us/step - loss: 9.6442e-04 - accuracy: 0.9999\n",
+      "59194/59194 [==============================] - 1s 25us/step - loss: 5.5068e-04 - accuracy: 0.9999\n",
       "Epoch 3/3\n",
-      "59194/59194 [==============================] - 1s 25us/step - loss: 3.2144e-04 - accuracy: 0.9999\n"
+      "59194/59194 [==============================] - 1s 25us/step - loss: 1.8081e-04 - accuracy: 0.9999\n"
      ]
     }
    ],
@@ -380,47 +396,47 @@
      "text": [
       "Danmini_Doorbell\n",
       "\n",
-      "Danmini_Doorbell-Before, Accuracy: 0.45674854486217376, Precision: 0.45674854486217376, Recall: 1.0, F1: 0.627079459214957\n",
+      "Danmini_Doorbell-Before, Accuracy: 0.4503056704616173, Precision: 0.45024529545288133, Recall: 1.0, F1: 0.620922952640614\n",
       "Danmini_Doorbell-After, Accuracy: 1.0, Precision: 1.0, Recall: 1.0, F1: 1.0\n",
       "-----------------\n",
       "Ecobee_Thermostat\n",
       "\n",
-      "Ecobee_Thermostat-Before, Accuracy: 0.19374546334381804, Precision: 0.19374546334381804, Recall: 1.0, F1: 0.32460096275652395\n",
-      "Ecobee_Thermostat-After, Accuracy: 0.9998790225018147, Precision: 0.9993759750390016, Recall: 1.0, F1: 0.9996878901373283\n",
+      "Ecobee_Thermostat-Before, Accuracy: 0.8024437454633438, Precision: 0.0, Recall: 0.0, F1: 0.0\n",
+      "Ecobee_Thermostat-After, Accuracy: 1.0, Precision: 1.0, Recall: 1.0, F1: 1.0\n",
       "-----------------\n",
       "Ennio_Doorbell\n",
       "\n",
-      "Ennio_Doorbell-Before, Accuracy: 0.5708020322202441, Precision: 0.0, Recall: 0.0, F1: 0.0\n",
+      "Ennio_Doorbell-Before, Accuracy: 0.40492422597594335, Precision: 0.4119426893298923, Recall: 0.94992817566181, F1: 0.5746741154562383\n",
       "Ennio_Doorbell-After, Accuracy: 1.0, Precision: 1.0, Recall: 1.0, F1: 1.0\n",
       "-----------------\n",
       "Philips_B120N10_Baby_Monitor\n",
       "\n",
-      "Philips_B120N10_Baby_Monitor-Before, Accuracy: 0.7469150613560019, Precision: 0.7469150613560019, Recall: 1.0, F1: 0.8551246455866338\n",
-      "Philips_B120N10_Baby_Monitor-After, Accuracy: 1.0, Precision: 1.0, Recall: 1.0, F1: 1.0\n",
+      "Philips_B120N10_Baby_Monitor-Before, Accuracy: 0.7541989442654419, Precision: 0.7541989442654419, Recall: 1.0, F1: 0.8598784610274146\n",
+      "Philips_B120N10_Baby_Monitor-After, Accuracy: 0.9999828614519778, Precision: 0.9999772763424001, Recall: 1.0, F1: 0.9999886380421075\n",
       "-----------------\n",
       "Provision_PT_737E_Security_Camera\n",
       "\n",
-      "Provision_PT_737E_Security_Camera-Before, Accuracy: 0.5877153218495014, Precision: 0.5521894380755497, Recall: 0.9471953578336557, F1: 0.697661165855396\n",
+      "Provision_PT_737E_Security_Camera-Before, Accuracy: 0.49689159435306307, Precision: 0.49689159435306307, Recall: 1.0, F1: 0.663897901795371\n",
       "Provision_PT_737E_Security_Camera-After, Accuracy: 1.0, Precision: 1.0, Recall: 1.0, F1: 1.0\n",
       "-----------------\n",
       "Provision_PT_838_Security_Camera\n",
       "\n",
-      "Provision_PT_838_Security_Camera-Before, Accuracy: 0.6306170054599984, Precision: 0.6306170054599984, Recall: 1.0, F1: 0.7734704143872225\n",
+      "Provision_PT_838_Security_Camera-Before, Accuracy: 0.37120299402732565, Precision: 0.0, Recall: 0.0, F1: 0.0\n",
       "Provision_PT_838_Security_Camera-After, Accuracy: 1.0, Precision: 1.0, Recall: 1.0, F1: 1.0\n",
       "-----------------\n",
       "Samsung_SNH_1011_N_Webcam\n",
       "\n",
-      "Samsung_SNH_1011_N_Webcam-Before, Accuracy: 0.4722974192384046, Precision: 0.4722974192384046, Recall: 1.0, F1: 0.6415788183378279\n",
-      "Samsung_SNH_1011_N_Webcam-After, Accuracy: 0.9999639054322325, Precision: 0.9999235824545316, Recall: 1.0, F1: 0.9999617897672997\n",
+      "Samsung_SNH_1011_N_Webcam-Before, Accuracy: 0.47125067677314564, Precision: 0.47123159110597745, Recall: 1.0, F1: 0.6405947152776074\n",
+      "Samsung_SNH_1011_N_Webcam-After, Accuracy: 0.9999639054322325, Precision: 0.9999234068627451, Recall: 1.0, F1: 0.9999617019646891\n",
       "-----------------\n",
       "SimpleHome_XCS7_1002_WHT_Security_Camera\n",
       "\n",
-      "SimpleHome_XCS7_1002_WHT_Security_Camera-Before, Accuracy: 0.46361581472815955, Precision: 0.46361581472815955, Recall: 1.0, F1: 0.6335211878183592\n",
+      "SimpleHome_XCS7_1002_WHT_Security_Camera-Before, Accuracy: 0.4094063528571995, Precision: 0.008597687518529499, Recall: 0.0025047503886681637, F1: 0.003879339174637148\n",
       "SimpleHome_XCS7_1002_WHT_Security_Camera-After, Accuracy: 1.0, Precision: 1.0, Recall: 1.0, F1: 1.0\n",
       "-----------------\n",
       "SimpleHome_XCS7_1003_WHT_Security_Camera\n",
       "\n",
-      "SimpleHome_XCS7_1003_WHT_Security_Camera-Before, Accuracy: 0.7540036488951957, Precision: 1.0, Recall: 0.0012345679012345679, F1: 0.0024660912453760785\n",
+      "SimpleHome_XCS7_1003_WHT_Security_Camera-Before, Accuracy: 0.24837826880194608, Precision: 0.24837826880194608, Recall: 1.0, F1: 0.39792148743555394\n",
       "SimpleHome_XCS7_1003_WHT_Security_Camera-After, Accuracy: 1.0, Precision: 1.0, Recall: 1.0, F1: 1.0\n",
       "-----------------\n"
      ]
